<resources>
    <string name="app_name">Spotify Streamer</string>

    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_share">Share</string>

    <string name="search_view_artist_hint">Search for artists</string>

    <string name="image_view_artist_description">Image of artist</string>
    <string name="image_view_album_description">Image of album</string>

    <string name="toast_no_tracks_found">No tracks found.</string>
    <string name="toast_no_network_connectivity">Network unavailable.</string>
    <string name="toast_no_artist_found">No artist found. Please refine search.</string>

    <string name="title_activity_player">Now Playing</string>
    <string name="title_activity_top10_tracks">Top 10 Tracks</string>
    <string name="title_activity_settings">Settings</string>

    <string name="notification_title">Now playing</string>

    <string name="pref_country_key" translatable="false">units</string>
    <string name="pref_title_country">Country</string>
    <string name="pref_dialog_title_country">Select country</string>
    <string name="pref_country_code_default" translatable="false">PH</string>
    <string-array name="pref_country_title">
        <item>Andorra</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Costa Rica</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Dominican Republic</item>
        <item>Denmark</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Malaysia</item>
        <item>Malta</item>
        <item>Mexico</item>
        <item>Monaco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Norway</item>
        <item>Panama</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Taiwan</item>
    </string-array>
    <string-array name="pref_country_code" translatable="false">
        <item>AD</item>
        <item>AR</item>
        <item>AU</item>
        <item>AT</item>
        <item>BE</item>
        <item>BO</item>
        <item>BR</item>
        <item>BG</item>
        <item>CA</item>
        <item>CL</item>
        <item>CR</item>
        <item>CY</item>
        <item>CZ</item>
        <item>DO</item>
        <item>DK</item>
        <item>EC</item>
        <item>SV</item>
        <item>EE</item>
        <item>FI</item>
        <item>FR</item>
        <item>DE</item>
        <item>GR</item>
        <item>GT</item>
        <item>HN</item>
        <item>HK</item>
        <item>HU</item>
        <item>IS</item>
        <item>IE</item>
        <item>IT</item>
        <item>LV</item>
        <item>LI</item>
        <item>LT</item>
        <item>LU</item>
        <item>MY</item>
        <item>MT</item>
        <item>MX</item>
        <item>MC</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NI</item>
        <item>NO</item>
        <item>PA</item>
        <item>PY</item>
        <item>PE</item>
        <item>PH</item>
        <item>PL</item>
        <item>PT</item>
        <item>SG</item>
        <item>SK</item>
        <item>ES</item>
        <item>SE</item>
        <item>CH</item>
        <item>TR</item>
        <item>GB</item>
        <item>US</item>
        <item>UY</item>
        <item>TW</item>
    </string-array>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_key" translatable="false">notifications</string>
    <string name="pref_notifications_summary_on">On</string>
    <string name="pref_notifications_summary_off">Off</string>

    <string name="error_unable_to_play_track">Unable to play track.</string>
    <string name="error_playback">Playback error.</string>
</resources>
